# spfit-spcat

./: .gitignore  API.md  CMakeLists.txt  CalCat.cpp  CalCat.hpp  CalCatIO.cpp  CalCat_helpers.cpp  CalError.hpp  CalFit.cpp  CalFit.hpp  CalFitIO.cpp  CalFitIO.hpp  CalFit_helpers.cpp  CalculationEngine.hpp  DpiContext.hpp  DpiEngine.cpp  DpiEngine.hpp  Logger.hpp  Makefile  README.md  SigintFlag.cpp  SigintFlag.hpp  SpinvContext.hpp  SpinvEngine.cpp  SpinvEngine.hpp  TASKS.md  TOML.md  calbak.cpp  calcat.cpp  calfit.c  calfit.cpp  calmrg.c  calmrg.cpp  calpgm.h  calpgm.md  cat_main.cpp  catlist.c  catread.c  catread.h  catutil.h  (+48 more)
.cursor/rules/: cpp.mdc  cursor-rules.mdc  general-rules.mdc  python_datasci.mdc  task-list.mdc
.github/workflows/: regression.yml  release.yml
examples/: cat_example.cpp  fit_example.cpp
pip/: index.html
pip/pickett/: index.html
python/: CMakeLists.txt  README.md  pyproject.toml
python/pickett/: __init__.py  toml_io.py
python/src/: bindings.cpp
python/tests/: conftest.py  test_ergonomics.py  test_filefree_molecules.py  test_smoke.py  test_toml_format.py  test_typed_input.py
python/tests/toml_fixtures/: co_4.dipoles.toml  co_4.toml
scripts/: gen_pip_index.py
spfit_spcat_test_suite/: README.md  assemble_test_suite.py  cleanup_test_suite.sh  compare_results.py  compare_toml_outputs.py  run_tests.py  run_toml_tests.py  validate_variance.py
spfit_spcat_test_suite/asymmetric_tops/ar-so2/: ar-so2.dipoles.toml  ar-so2.int  ar-so2.lin  ar-so2.par  ar-so2.toml
spfit_spcat_test_suite/asymmetric_tops/ar-so2/reference_outputs/: ar-so2.cat  ar-so2.fit  ar-so2.out
spfit_spcat_test_suite/asymmetric_tops/ar-so2/toml_reference/: ar-so2.cat  ar-so2.catalog.toml  ar-so2.fit  ar-so2.fitted.toml  ar-so2.out
spfit_spcat_test_suite/asymmetric_tops/ar-so2/v2008_results/: ar-so2.egy  ar-so2.fit  ar-so2.out  ar-so2.par  ar-so2.var
spfit_spcat_test_suite/asymmetric_tops/h2coh_plus/: h2coh_plus.dipoles.toml  h2coh_plus.int  h2coh_plus.lin  h2coh_plus.par  h2coh_plus.toml
spfit_spcat_test_suite/asymmetric_tops/h2coh_plus/reference_outputs/: h2coh_plus.cat  h2coh_plus.fit
spfit_spcat_test_suite/asymmetric_tops/h2coh_plus/toml_reference/: h2coh_plus.cat  h2coh_plus.catalog.toml  h2coh_plus.fit  h2coh_plus.fitted.toml  h2coh_plus.out
spfit_spcat_test_suite/asymmetric_tops/h2coh_plus/v2008_results/: h2coh_plus.cat  h2coh_plus.fit  h2coh_plus.out  h2coh_plus.par  h2coh_plus.var
spfit_spcat_test_suite/asymmetric_tops/h2s/: h2s.dipoles.toml  h2s.int  h2s.lin  h2s.toml
spfit_spcat_test_suite/asymmetric_tops/h2s/reference_outputs/: h2s.cat  h2s.fit  h2s.out
spfit_spcat_test_suite/asymmetric_tops/h2s/toml_reference/: h2s.cat  h2s.catalog.toml  h2s.fit  h2s.fitted.toml  h2s.out
spfit_spcat_test_suite/asymmetric_tops/h2s/v2008_results/: h2s.bak  h2s.cat  h2s.fit  h2s.out  h2s.par  h2s.var
spfit_spcat_test_suite/diatomic_molecules/co_4/: co_4.dipoles.toml  co_4.int  co_4.lin  co_4.par  co_4.toml
spfit_spcat_test_suite/diatomic_molecules/co_4/reference_outputs/: co_4.cat  co_4.fit  co_4.out
spfit_spcat_test_suite/diatomic_molecules/co_4/toml_reference/: co_4.catalog.toml  co_4.fit  co_4.fitted.toml  co_4.out
spfit_spcat_test_suite/diatomic_molecules/co_4/v2008_results/: co_4.cat  co_4.fit  co_4.out  co_4.par  co_4.var
spfit_spcat_test_suite/diatomic_molecules/csf/: csf.dipoles.toml  csf.int  csf.lin  csf.par  csf.toml
spfit_spcat_test_suite/diatomic_molecules/csf/reference_outputs/: csf.fit
spfit_spcat_test_suite/diatomic_molecules/csf/toml_reference/: csf.catalog.toml  csf.fit  csf.fitted.toml  csf.out
spfit_spcat_test_suite/diatomic_molecules/csf/v2008_results/: csf.cat  csf.egy  csf.fit  csf.out  csf.par  csf.var
spfit_spcat_test_suite/diatomic_molecules/o2_1and3/: o2_1and3.dipoles.toml  o2_1and3.int  o2_1and3.lin  o2_1and3.par  o2_1and3.toml
spfit_spcat_test_suite/diatomic_molecules/o2_1and3/reference_outputs/: o2_1and3.cat  o2_1and3.fit
spfit_spcat_test_suite/diatomic_molecules/o2_1and3/toml_reference/: o2_1and3.cat  o2_1and3.catalog.toml  o2_1and3.fit  o2_1and3.fitted.toml  o2_1and3.out
spfit_spcat_test_suite/diatomic_molecules/o2_1and3/v2008_results/: o2_1and3.cat  o2_1and3.egy  o2_1and3.fit  o2_1and3.out  o2_1and3.par  o2_1and3.var
spfit_spcat_test_suite/general_interactions/clclo2/: clclo2.dipoles.toml  clclo2.lin  clclo2.toml
spfit_spcat_test_suite/general_interactions/clclo2/reference_outputs/: clclo2.fit
spfit_spcat_test_suite/internal_rotation/ch3oh/: ch3oh.dipoles.toml  ch3oh.int  ch3oh.lin  ch3oh.par  ch3oh.toml
spfit_spcat_test_suite/linear_molecules/hcp000/: hcp000.dipoles.toml  hcp000.int  hcp000.lin  hcp000.toml
spfit_spcat_test_suite/linear_molecules/oc33s_lt/: oc33s_lt.dipoles.toml  oc33s_lt.int  oc33s_lt.lin  oc33s_lt.toml
spfit_spcat_test_suite/symmetric_tops/ch3cn_MeCN/: ch3cn_MeCN.dipoles.toml  ch3cn_MeCN.int  ch3cn_MeCN.lin  ch3cn_MeCN.toml
spfit_spcat_test_suite/symmetric_tops/fso3/: fso3.dipoles.toml  fso3.int  fso3.lin  fso3.toml
src/api/: InputSchema.hpp  builders.cpp  builders.hpp  legacy_parser.cpp  legacy_parser.hpp  toml_io.cpp  toml_io.hpp
src/common/: Logger.cpp  SigintFlag.cpp  SigintFlag.hpp  compat.hpp  file_helpers.cpp  file_helpers.hpp
src/engine/: CalculationEngine.hpp  DpiEngine.cpp  DpiEngine.hpp  SpinvContext.hpp  SpinvEngine.cpp  SpinvEngine.hpp  dpi.cpp  dpi.h  spinit.cpp  spinit.h  spinv_hamiltonian.cpp  spinv_internal.h  spinv_linalg_sort.c  spinv_setup.cpp  spinv_spin_symmetry.cpp  spinv_utils.cpp
src/legacy_apps/: calbak.cpp  calmrg.cpp  iambak.cpp  iamcalc.cpp  moiam.cpp  readopt.c  readopt.h  reassign.cpp  sortegy.cpp  sortn.cpp  sortsub.c  stark.cpp  termval.cpp
src/spcat/: CalCat.cpp  CalCat.hpp  CalCatIO.cpp  CalCatIO.hpp  CalCat_helpers.cpp  OutputSink.hpp  cat_main.cpp  sortsub.c  sortsub.h
src/spfit/: CalFit.cpp  CalFit.hpp  CalFitIO.cpp  CalFitIO.hpp  CalFit_helpers.cpp  fit_main.cpp  subfit.cpp  subfit.h
src/splib/: blas_compat.h  calpgm_types.h  catutil.c  catutil.h  cnjj.c  dblas.c  ftran.c  lsqfit.c  slib.h  ulib.c  ulib.h
(+69 files in other folders)
