[build-system]
requires = ["scikit-build-core>=0.4", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pickett"
version = "0.1.0"
description = "Python bindings for SPFIT/SPCAT spectroscopy software"
requires-python = ">=3.8"
dependencies = [
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pickett"]

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
    "pytest>=8.3.5",
    "scikit-build-core>=0.12.2",
]

[tool.pytest.ini_options]
# conftest.py sets CWD to repo root so tests can use spfit_spcat_test_suite/ paths.
