[build-system]
requires = ["scikit-build-core>=0.4", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pickett"
version = "0.2.0"
description = "Python bindings for SPFIT/SPCAT (calpgm suite) spectroscopy software"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pickett"]

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
    "pytest>=8.3.5",
    "scikit-build-core>=0.12.2",
]

[tool.pytest.ini_options]
# conftest.py sets CWD to repo root so tests can use spfit_spcat_test_suite/ paths.

[tool.cibuildwheel]
# Build CPython 3.9–3.13; skip PyPy, 32-bit Windows/Linux, musl Linux
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip  = "pp* *-win32 *-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]  # aarch64 via QEMU emulation in CI

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "10.13"}  # nanobind requires aligned deallocation (macOS 10.13+)

[tool.cibuildwheel.windows]
archs = ["AMD64"]
