[build-system]
requires = ["scikit-build-core>=0.4", "nanobind", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pickett"
dynamic = ["version"]
description = "Python bindings for SPFIT/SPCAT (calpgm suite) spectroscopy software"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pickett"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."  # git repo root is one level above python/
# version tags: v1.2.3 → 1.2.3; v1.2.3-alpha4 → 1.2.3a4 (PEP 440)
tag_regex = "^v(?P<version>.+)$"

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
    "pytest>=8.3.5",
    "scikit-build-core>=0.12.2",
]

[tool.pytest.ini_options]
# conftest.py sets CWD to repo root so tests can use spfit_spcat_test_suite/ paths.

[tool.cibuildwheel]
# Build CPython 3.10–3.14; skip 32-bit Windows/Linux and musl Linux
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip  = "*-win32 *-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]  # aarch64 via QEMU emulation in CI

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "11"}  # nanobind requires aligned deallocation (macOS 10.13+). ARM minimum is 11.

[tool.cibuildwheel.windows]
archs = ["AMD64"]
